commented out facebook login

--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -27,15 +27,15 @@
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.craigslist">
-          Craigslist<i class="fa fa-gift" style="float:right;"></i>
+          Craigslist Items<i class="fa fa-group" style="float:right;"></i>
+        </ion-item>
+
+        <ion-item nav-clear menu-close ui-sref="app.matches">
+          FreeSwap Items<i class="fa fa-group" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.post">
           Post<i class="fa fa-camera" style="float:right;"></i>
-        </ion-item>
-
-        <ion-item nav-clear menu-close ui-sref="app.matches">
-          Matches<i class="fa fa-group" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.history">
@@ -48,10 +48,6 @@
 
         <!-- <ion-item nav-clear menu-close ui-sref="front-page">
           Login
-        </ion-item> -->
-
-<!--         <ion-item nav-clear menu-close ui-sref="app.chat">
-          Chat
         </ion-item> -->
 
       </ion-list>
