--- a/www/js/login/login.html
+++ b/www/js/login/login.html
@@ -18,12 +18,12 @@
           <input type="password" required ng-minlength="1" ng-maxlength="25" ng-model="user.password">
         </label>
         <div class="row">
-          <div class="col col-50">
+          <!-- <div class="col col-50"> -->
            <button class="button button-block button-calm" ng-click="login(user)">Log in</button>
-          </div>
+<!--           </div>
           <div class="col col-50">
            <button class="button button-block button-calm" ng-click="loginPlatform('facebook')" style="background-color: #3b5998"><i class="fa fa-facebook"></i>Facebook</button>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="register">
